syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/timestamp.proto";
import "api/domain/projections/user.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/projections";

package projections;

message LifecycleMetadata {
  // When it has been created
  google.protobuf.Timestamp created = 1;
  // By whom it has been created
  User created_by = 2;
  // When it has been last modified
  google.protobuf.Timestamp last_modified = 3;
  // By whom it has been last modified
  User last_modified_by = 4;
  // When it has been deleted
  google.protobuf.Timestamp deleted = 5;
  // By whom it has been deleted
  User deleted_by = 6;
}

message ApprovalMetadata {
  // When it has been approved
  google.protobuf.Timestamp approved = 7;
  // By whom it has been approved
  User approved_by = 8;
  // When it has been denied
  google.protobuf.Timestamp denied = 9;
  // By whom it has been denied
  User denied_by = 10;
}